# noodle

./: .modalignore  Cargo.toml  DESIGN.md  LICENSE.md  README.md  chat.rs  eval.rs  finetune.rs  inference.rs  lib.rs  main.rs  model.rs  opts.rs  tokenizer.rs  train.rs
.github/workflows/: ci.yml
jobs/modal/: finetune.py  train.py
scripts/: prepare_dolly.py
